@@ -37,7 +37,7 @@ L<RPi::Const> module.
 
 =head1 SETUP
 
-=head2 System configuration
+=head2 Perlbrew configuration
 
 If you want to avoid using your system installed Perl installation to use this
 software (or you want to use interrupts), you should do some pre-configuration
@@ -58,6 +58,11 @@ Then, install an instance of Perl, and switch to it:
     perlbrew install perl-5.26.0
     perlbrew switch perl-5.26.0
 
+=head2 sudo configuration
+
+NOTE: Only when using PWM features do you need to use C<sudo>. All other aspects
+of this software work properly with a non-privileged user account.
+
 To use C<sudo> to run your scripts within the appropriate Perl
 installation, you need to modify the C</etc/sudoers> file. Prepend the string
 value for the C<secure_path> directive to include the path to the new
@@ -69,15 +74,75 @@ Now, you can do everything with the normal user account, using their personal
 installation of Perl, and you just need C<sudo> to run your scripts, leaving
 your default system installation intact.
 
-NOTE: Only when using PWM features do you need to use C<sudo>. All other aspects
-of this software work properly with a non-privileged user account.
-
 NOTE: If you get errors about "Permission Denied" accessing C</dev/mem> or
 C</dev/gpiomem>, you need to add the C<pi> user to the C<gpio> group:
 
     sudo adduser pi gpio
 
-=head1 PI 
+=head2 I2C configuration
+
+You need to have some core software installed before using the I2C bus. The
+Raspberry Pi 3 already has everything pre-loaded. On a typical Unix computer,
+you'd do something along these lines:
+
+    sudo apt-get install libi2c-dev i2c-tools build-essential
+
+To test your I2C bus:
+
+    i2cdetect -y 1
+
+...or on some machines:
+
+    i2cdetect -y 0
+
+First thing you need to do is enable the I2C bus. You can do so in
+C<raspi-config>, or ensure the C<ram=i2c_arm> directive is set to C<on> in the
+C</boot/config.txt> file:
+
+    dtparam=i2c_arm=on
+
+NOTE: If you get permission errors accessing the I2C bus, you may need to add
+the C<pi> user to the C<i2c> group:
+
+    sudo adduser pi i2c
+
+=head2 Arduino I2C configuration
+
+Often, the default speed of the I2C bus master is too fast for an Arduino. If
+you do not get any results, try changing the speed. On a Raspberry Pi, you do
+that by setting the C<dtparam=i2c_arm_baudrate> directive in the
+C</boot/config.txt> file:
+
+    dtparam=i2c_arm_baudrate=10000
+
+=head2 SPI configuration
+
+First thing you need to do is enable the SPI bus. You can do so in
+C<raspi-config>, or ensure the C<dtparam=spi> directive is set to C<on> in the
+C</boot/config.txt> file:
+
+    dtparam=spi=on
+
+NOTE: If you get permission errors accessing the SPI bus, you may need to add
+the C<pi> user to the C<spi> group:
+
+    sudo adduser pi spi
+
+=head1 Serial configuration
+
+In order to use GPIO pins 14 and 15 as a serial interface on the Raspberry Pi,
+you need to disable the built-in Bluetooth adaptor. This distribution will not
+operate correctly without this being done.
+
+First, in C<raspi-config>, in the C<Serial> section in C<Interfacing Options>,
+disable "login shell" on the serial interface, then disable Bluetooth by editing
+the C</boot/config.txt>, and add the following line:
+
+    dtoverlay=pi3-disable-bt-overlay
+
+Save the file, then reboot the Pi.
+
+=head1 PI
 
 =head2 Create a Raspberry Pi object
 
